# study_CMake

./: .gitignore
chicken_cmake/1_module/: add_cal.cpp  div_cal.cpp  div_cal.h  main.cpp  print_result.cpp  print_result.h
chicken_cmake/2_module/: CMakeLists.txt  Makefile  add_cal.h  cal  div_cal.cpp  print_result.cpp
chicken_cmake/3_module/: CMakeLists.txt  main.cpp
chicken_cmake/3_module/my_math/: CMakeLists.txt
chicken_cmake/3_module/my_math/src/: add_cal.cpp  div_cal.cpp
chicken_cmake/3_module/my_print/: CMakeLists.txt
chicken_cmake/3_module/my_print/src/: print_result.cpp
